--- a/src/sass/settings.scss
+++ b/src/sass/settings.scss
@@ -1,3 +1,46 @@
-h2{
-  background: #ffffff;
+// Variables
+
+// Import
+@import "libs/**/*.scss";
+@import "mixins.scss";
+@import "template-sprite.scss";
+@import 'components/**/*.scss';
+
+// Default styles
+
+html,body{
+  width: 100%;
+  height: 100%;
+}
+
+.wrapper{
+  display: flex;
+  flex-direction: column;
+  max-width: 1200px;
+  min-height: 100%;
+  overflow: hidden;
+}
+
+.container{
+  margin: 0 auto;
+}
+
+.main-content{
+  flex-grow: 1;
+}
+
+*{
+  box-sizing: border-box;
+}
+
+ol,ul{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+h1,h2,h3,h4,h5{
+  margin-top: 0;
+  margin-bottom: 0;
+  font-style: normal;
 }
